--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head><meta charset="UTF-8"></head>
 <html>
   <body>
-    <form action="/action_page.php">
+    <form action="javascript:void(0);">
       <label for="To_Doodle">String To Doodle:</label><br>
       <TEXTAREA id="To_Doodle" Name="content" ROWS="4" COLS="50"></TEXTAREA><br>
       <label for="Doodled">Doodled:</label><br>
