--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <TEXTAREA id="To_Doodle" Name="content" ROWS="4" COLS="50"></TEXTAREA><br>
       <label for="Doodled">Doodled:</label><br>
       <TEXTAREA id="Doodled" Name="Doodled" ROWS="4" COLS="50"></TEXTAREA><br>
-      <input id="Submit" type="submit" value="Submit" onclick="doFunction();"/>
+      <input id="Submit" type='button' value="Translate" onclick="doFunction();"/>
     </form>
     <script type="text/javascript" src="Definitions.js"></script>
     <script type="text/javascript" src="translate.js"></script>
